--- a/src/documentation/components/EditorComponent.html
+++ b/src/documentation/components/EditorComponent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>svogv-demo documentation</title>
+        <title>SVOGV 0.9 Documentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,7 +14,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">svogv-demo documentation</a>
+            <a href="../" class="navbar-brand">SVOGV 0.9 Documentation</a>
             <button type="button" class="btn btn-default btn-menu ion-ios-menu" id="btn-menu"></button>
         </div>
 
@@ -44,13 +44,13 @@
             <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">API</a>
         </li>
         <li >
+            <a href="#readme" role="tab" id="readme-tab" data-toggle="tab" data-link="readme">Documentation and Examples</a>
+        </li>
+        <li >
             <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Source: Template</a>
         </li>
         <li >
             <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source: Code</a>
-        </li>
-        <li >
-            <a href="#styleData" role="tab" id="styleData-tab" data-toggle="tab" data-link="style">Source: Styles</a>
         </li>
         <li >
             <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
@@ -667,7 +667,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>first(array: <a href="../interfaces/Array.html">Array<literal type></a>, n: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <code>first(array: Array<literal type>, n: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
@@ -697,7 +697,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                                 <tr>
                                     <td>array</td>
                                     <td>
-                                                <code><a href="../interfaces/Array.html" target="_self" >Array&lt;literal type&gt;</a></code>
+                                            <code>Array&lt;literal type&gt;</code>
                                     </td>
 
                                     <td>
@@ -968,7 +968,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="../interfaces/Array.html" target="_self" >Array&lt;literal type&gt;</a></code>
+                            <i>Type : </i>    <code>Array&lt;literal type&gt;</code>
 
                         </td>
                     </tr>
@@ -985,6 +985,110 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
 
 </div>
 
+    <div class="tab-pane fade " id="c-readme">
+        <p><h1 id="complete-documentation-of-the-editoromponent">Complete Documentation of the Editoromponent</h1>
+<p>A form can make use of the <code>EditorComponent</code>, named <code>&lt;ac-editor&gt;</code>. An object with several properties, decorated with UI instructions, created a whole form.</p>
+<h2 id="example">Example</h2>
+<p>The simplest form of usage looks like this:</p>
+<div><pre class="line-numbers"><code class="language-html">&lt;form (ngSubmit)=&quot;saveUser()&quot; role=&quot;form&quot; #userForm=&quot;ngForm&quot;&gt;
+  &lt;fieldset&gt;
+    &lt;legend&gt;Edit current user&lt;/legend&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;userName&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;email&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;phoneNumber&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;age&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;birthday&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;isActive&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;passWord&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor [formGroup]=&quot;userFormGroup&quot; name=&quot;passWordTwo&quot;&gt;&lt;/ac-editor&gt;
+    &lt;div class=&quot;form-group&quot;&gt;
+      &lt;button class=&quot;btn btn-sm btn-success&quot; type=&quot;submit&quot; [disabled]=&quot;!userForm.valid&quot;&gt;&lt;i class=&quot;fa fa-save&quot;&gt;&lt;/i&gt; Save&lt;/button&gt;
+      &lt;button class=&quot;btn btn-sm btn-secondary&quot; type=&quot;submit&quot; [disabled]=&quot;!userForm.valid&quot;&gt;&lt;i class=&quot;fa fa-close&quot;&gt;&lt;/i&gt; Save &amp;amp; Close&lt;/button&gt;
+      &lt;button class=&quot;btn btn-sm btn-warning&quot; type=&quot;button&quot; (click)=&quot;closeForm()&quot;&gt;
+        &lt;i class=&quot;fa fa-remove&quot;&gt;&lt;/i&gt; Cancel &amp;amp; Return to List
+      &lt;/button&gt;
+    &lt;/div&gt;
+  &lt;/fieldset&gt;
+&lt;/form&gt;</code></pre></div><p>The styling is baded on Bootstrap 4.</p>
+<p>You must have a form and provide the groups name. Internally, the <code>ReactiveFormsModule</code> is being used. The logic expects several decorators, that are being examined and based on the findings a <code>FormGroup</code> object is being created. That&#39;s handled by a service the <em>SvogvModule</em> provides. The component&#39;s code looks like this:</p>
+<div><pre class="line-numbers"><code class="language-typescript">import { Component, OnInit, OnDestroy } from &#39;&#64;angular/core&#39;;
+import { FormGroup, NgForm } from &#39;&#64;angular/forms&#39;;
+import { FormValidatorService } from &#39;svogv&#39;;
+import { UserViewModel } from &#39;../../../viewmodels&#39;;
+
+&#64;Component({
+  templateUrl: &#39;./editorform.component.html&#39;
+})
+export class EditorFormComponent implements OnInit, OnDestroy {
+
+  userForm: NgForm;
+  userFormGroup: FormGroup;
+  user: UserViewModel;
+
+  constructor(private formService: FormValidatorService) {
+  }
+
+  ngOnInit() {
+    this.userFormGroup = this.formService.build(UserViewModel);
+  }
+
+}
+</code></pre></div><p>The first magic is the call of the <em>build</em> method. The second magic is the usage of decorators. A typical view model (in the example <em>UserViewModel</em>) would look like this:</p>
+<div><pre class="line-numbers"><code class="language-typescript">export class UserViewModel {
+
+  &#64;Hidden()
+  id: number = 0;
+
+  &#64;Display(&#39;E-Mail&#39;, 20, &#39;E-Mail address&#39;)
+  &#64;Required()
+  &#64;MaxLength(100)
+  &#64;Email()
+  email: string = &#39;&#39;;
+
+  &#64;Display(&#39;Phone Number&#39;, 30, &#39;The user\&#39;s phone&#39;)
+  &#64;Required()
+  &#64;MaxLength(20)
+  phoneNumber: string = &#39;&#39;;
+
+  &#64;Display(&#39;User Name&#39;, 33, &#39;The full name&#39;)
+  &#64;Required(&#39;User Name is required&#39;)
+  &#64;MaxLength(100)
+  userName: string = &#39;&#39;;
+
+  &#64;Display(&#39;Age&#39;, 40, &#39;From 12 to 88&#39;)
+  &#64;DisplayGroup(&#39;Personal&#39;)
+  &#64;Range(12, 88)
+  age: number = 24;
+
+  &#64;Display(&#39;Birthday&#39;, 50)
+  &#64;DisplayGroup(&#39;Personal&#39;)
+  birthday: Date = new Date();
+
+  &#64;Display(&#39;Is Active&#39;, 60)
+  active: boolean = true;
+
+  &#64;Display(&#39;Password&#39;, 70)
+  &#64;DisplayGroup(&#39;Password&#39;)
+  &#64;Required()
+  &#64;Compare(&#39;passWordTwo&#39;)
+  passWord: string = &#39;&#39;;
+
+  &#64;Display(&#39;Password&#39;, 80)
+  &#64;DisplayGroup(&#39;Password&#39;)
+  &#64;Required()
+  passWordTwo: string = &#39;&#39;;
+
+  &#64;Display(&#39;Done&#39;, 100, &#39;Work progress&#39;)
+  done?: number = 0;
+
+}</code></pre></div><p>Note, that the default values for initialization are mandatory. The decorators comes in two flavors:</p>
+<ol>
+<li>UI decorators control the appearance (such as <code>@Display</code>)</li>
+<li>Validators control the validation</li>
+</ol>
+<p>SVOGV is using the <code>ReactiveFormsModule</code> and handles everything in a straight Angular way.</p>
+</p>
+    </div>
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, Input, Output, OnInit } from &#x27;@angular/core&#x27;;
@@ -1243,23 +1347,6 @@ export class EditorComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade " id="c-styleData">
-            <pre class="line-numbers"><code class="language-scss">input[type&#x3D;&quot;checkbox&quot;] { display: none; }
-input[type&#x3D;&quot;checkbox&quot;] + label:before { font-family: FontAwesome; }
-input[type&#x3D;&quot;checkbox&quot;] + label:before { content: &quot;\f096&quot;; }
-input[type&#x3D;&quot;checkbox&quot;]:checked + label:before { content: &quot;\f046&quot;; }
-
-      input[type&#x3D;&#x27;checkbox&#x27;] + label {
-        display: inline-block;
-        width: 15px;
-        height: 20px;
-        margin: -1px 4px 0 0;
-        vertical-align: middle;
-        cursor: pointer;
-      }
-    
-</code></pre>
-    </div>
 
     <div class="tab-pane fade " id="c-tree">
         <div id="tree-container"></div>
