--- a/src/documentation/components/AutoFormComponent.html
+++ b/src/documentation/components/AutoFormComponent.html
@@ -388,7 +388,7 @@ If there are no groups this will be ignored. Optional.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;literal type&gt;</code>
+                            <i>Type : </i>    <code>literal type[]</code>
 
                         </td>
                     </tr>
@@ -416,7 +416,7 @@ If there are no groups this will be ignored. Optional.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;literal type&gt;</code>
+                            <i>Type : </i>    <code>literal type[]</code>
 
                         </td>
                     </tr>
@@ -552,13 +552,13 @@ export class AutoFormComponent implements OnInit {
   @Input()
   public ungroupedAfter &#x3D; true;
 
-  public editors: Array&lt;{ key: number; editor: string }&gt;;
-  public groups: Array&lt;{
+  public editors: { key: number; editor: string }[];
+  public groups: {
     key: number;
     name: string;
     desc: string;
-    editors: Array&lt;{ key: number; editor: string }&gt;;
-  }&gt;;
+    editors: { key: number; editor: string }[];
+  }[];
 
   constructor() {
     this.editors &#x3D; new Array&lt;{ key: number; editor: string }&gt;();
@@ -566,7 +566,7 @@ export class AutoFormComponent implements OnInit {
       key: number;
       name: string;
       desc: string;
-      editors: Array&lt;{ key: number; editor: string }&gt;;
+      editors: { key: number; editor: string }[];
     }&gt;();
   }
 
