--- a/src/documentation/components/EditorComponent.html
+++ b/src/documentation/components/EditorComponent.html
@@ -667,7 +667,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>first(array: Array<literal type>, n: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <code>first(array: literal type[], n: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
@@ -697,7 +697,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                                 <tr>
                                     <td>array</td>
                                     <td>
-                                            <code>Array&lt;literal type&gt;</code>
+                                            <code>literal type[]</code>
                                     </td>
 
                                     <td>
@@ -968,7 +968,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;literal type&gt;</code>
+                            <i>Type : </i>    <code>literal type[]</code>
 
                         </td>
                     </tr>
@@ -1180,7 +1180,7 @@ export class EditorComponent implements OnInit {
   public value: any;
 
   // additional values provided by TemplateHint decorator
-  public params: Array&lt;{ key: string; value: any }&gt;;
+  public params: { key: string; value: any }[];
 
   public errors: string[];
 
@@ -1192,7 +1192,7 @@ export class EditorComponent implements OnInit {
     return this.first(this.params.filter((e) &#x3D;&gt; e.key &#x3D;&#x3D;&#x3D; key), 0);
   }
 
-  public first(array: Array&lt;{ key: string; value: any }&gt;, n: number): any {
+  public first(array: { key: string; value: any }[], n: number): any {
     if (array &#x3D;&#x3D; null) {
       return void 0;
     }
@@ -1244,7 +1244,7 @@ export class EditorComponent implements OnInit {
       if (editorModel[&#x60;__hasTemplateHint__${this.name}&#x60;]) {
         this.type &#x3D; (editorModel[&#x60;__templatehint__${this.name}&#x60;] as string).toLowerCase();
         if (editorModel[&#x60;__templatehintParams__${this.name}&#x60;]) {
-          this.params &#x3D; editorModel[&#x60;__templatehintParams__${this.name}&#x60;] as Array&lt;{ key: string; value: any }&gt;;
+          this.params &#x3D; editorModel[&#x60;__templatehintParams__${this.name}&#x60;] as { key: string; value: any }[];
         }
       }
 
