--- a/projects/bootstrap-ui/src/lib/widgets/editors/editor/editor.component.html
+++ b/projects/bootstrap-ui/src/lib/widgets/editors/editor/editor.component.html
@@ -1,72 +1,72 @@
 <div class="form-group row"
-    [formGroup]="formGroup"
-     *ngIf="type != 'hidden' && formGroup"
-     [ngClass]="{ 'has-danger': !formGroup.controls[name].valid && formGroup.controls[name].touched }">
+    [formGroup]="model.formGroup"
+     *ngIf="model.type != 'hidden' && model.formGroup"
+     [ngClass]="{ 'has-danger': !model.formGroup.controls[name].valid && model.formGroup.controls[name].touched }">
   <label class="col-form-label col-md-3 col-sm-10"
     [attr.for]="name"
-    [attr.title]="tooltip" >{{ label }}{{ labelDivider }} </label>
-  <div [ngClass]="{ 'col-md-7 col-sm-10': inline }">
-    <textarea *ngIf="type == 'textarea'"
+    [attr.title]="model.tooltip" >{{ model.label }}{{ model.labelDivider }} </label>
+  <div [ngClass]="{ 'col-md-7 col-sm-10': model.inline }">
+    <textarea *ngIf="model.type == 'textarea'"
             class="form-control"
             [id]="name"
-            [readOnly]='readonly'
+            [readOnly]='model.readonly'
             [formControlName]="name"
             [attr.rows]="getParams('rows')"
             [attr.cols]="getParams('cols')">
     </textarea>
-    <select *ngIf="type == 'enum' && enumValues" class="form-control" [id]="name"
-          [formControlName]="name" [disabled]='readonly'>
-      <option *ngFor="let option of enumValues" [value]="option.key">{{option.val}}</option>
+    <select *ngIf="model.type == 'enum' && model.enumValues" class="form-control" [id]="name"
+          [formControlName]="name" [disabled]='model.readonly'>
+      <option *ngFor="let option of model.enumValues" [value]="option.key">{{option.val}}</option>
     </select>
-    <select *ngIf="type == 'list' && listValues" class="form-control" [id]="name"
-          [formControlName]="name" [disabled]='readonly'>
-      <option *ngFor="let option of listValues" [value]="option.key">{{option.val}}</option>
+    <select *ngIf="model.type == 'list' && model.listValues" class="form-control" [id]="name"
+          [formControlName]="name" [disabled]='model.readonly'>
+      <option *ngFor="let option of model.listValues" [value]="option.key">{{option.val}}</option>
     </select>
-    <input *ngIf="type == 'range'" type="range"
+    <input *ngIf="model.type == 'range'" type="range"
         class="form-control"
-        [placeholder]="waterMark"
-        [attr.minvalue]="fromValue"
-        [attr.maxvalue]="toValue"
-        [attr.min]="fromValue"
-        [attr.max]="toValue"
+        [placeholder]="model.waterMark"
+        [attr.minvalue]="model.fromValue"
+        [attr.maxvalue]="model.toValue"
+        [attr.min]="model.fromValue"
+        [attr.max]="model.toValue"
         [id]="name"
         [formControlName]="name"
-        [title]="tooltip" />
-    <input *ngIf="type == 'calendar'" type="date"
+        [title]="model.tooltip" />
+    <input *ngIf="model.type == 'calendar'" type="date"
         class="form-control"
-        [placeholder]="waterMark"
-        [readOnly]='readonly'
+        [placeholder]="model.waterMark"
+        [readOnly]='model.readonly'
         [id]="name"
         [formControlName]="name"
-        [title]="tooltip" />
-    <input *ngIf="type == 'number'" type="number"
+        [title]="model.tooltip" />
+    <input *ngIf="model.type == 'number'" type="number"
         class="form-control"
-        [placeholder]="waterMark"
-        [readOnly]='readonly'
+        [placeholder]="model.waterMark"
+        [readOnly]='model.readonly'
         [id]="name"
         [formControlName]="name"
-        [title]="tooltip" />
-    <input *ngIf="type == 'boolean'" type="checkbox"
+        [title]="model.tooltip" />
+    <input *ngIf="model.type == 'boolean'" type="checkbox"
         class="form-control"
-        [readOnly]='readonly'
+        [readOnly]='model.readonly'
         [id]="name"
         [formControlName]="name"
-        [title]="tooltip" />
-    <label *ngIf="type == 'boolean'" [attr.for]="name"></label>
-    <input *ngIf="type == 'text' || type == ''" [placeholder]="waterMark"
-        [readOnly]='readonly'
+        [title]="model.tooltip" />
+    <label *ngIf="model.type == 'boolean'" [attr.for]="name"></label>
+    <input *ngIf="model.type == 'text' || model.type == ''" [placeholder]="model.waterMark"
+        [readOnly]='model.readonly'
         type="text" class="form-control" [id]="name" [formControlName]="name" />
-    <ng-container *ngIf="type == 'template'">
+    <ng-container *ngIf="model.type == 'template'">
         <ng-content></ng-content>
     </ng-container>
     <span class="fa fa-warning text-danger form-control-feedback"
-        [hidden]="formGroup.controls[name].valid || formGroup.controls[name].pristine"></span>
+        [hidden]="model.formGroup.controls[name].valid || model.formGroup.controls[name].pristine"></span>
     <small class="text-danger"
-        [hidden]="formGroup.controls[name].valid || formGroup.controls[name].pristine">
-    <span *ngFor="let error of errors">{{ formGroup.controls[name]['messages'][error] }}</span>
+        [hidden]="model.formGroup.controls[name].valid || model.formGroup.controls[name].pristine">
+    <span *ngFor="let error of errors">{{ model.formGroup.controls[name]['messages'][error] }}</span>
     </small>
   </div>
 </div>
 <div>
-  <input *ngIf="type == 'hidden'" [id]="name" [formControlName]="name" type="hidden" />
+  <input *ngIf="model.type == 'hidden'" [id]="name" [formControlName]="name" type="hidden" />
 </div>
