Adapt demo code !

--- a/src/app/components/ui/tabs/minitabs/minitabs.component.html
+++ b/src/app/components/ui/tabs/minitabs/minitabs.component.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills" role="tablist">
   <li class="nav-item">
-    <a class="nav-link"  [ngClass]="{ active: tabSelected == 'info' }" [routerLink]="" (click)="tabSelected = 'info'">Info</a>
+    <a class="nav-link"  [ngClass]="{ active: tabSelected == 'info' }" (click)="tabSelected = 'info'">Info</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link"  [ngClass]="{ active: tabSelected == 'code' }" [routerLink]="" (click)="tabSelected = 'code'">Code</a>
+    <a class="nav-link"  [ngClass]="{ active: tabSelected == 'code' }" (click)="tabSelected = 'code'">Code</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" [ngClass]="{ active: tabSelected == 'demo' }" [routerLink]="" (click)="tabSelected = 'demo'">Demo</a>
+    <a class="nav-link" [ngClass]="{ active: tabSelected == 'demo' }" (click)="tabSelected = 'demo'">Demo</a>
   </li>
 </ul>
