--- a/src/app/components/widgetdemo/grid/gridfilter.component.html
+++ b/src/app/components/widgetdemo/grid/gridfilter.component.html
@@ -12,7 +12,7 @@
     <div class="col-12">
       <div class="card card-block clearfix">
         <div class="card-header card-info">
-          Common Features of Grid Component
+          Common Features of Grid Filter
         </div>
         <div class="card-body">
           <p>
