--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -7,6 +7,41 @@ html {
   height: 100%;
 }
 
+main > .container {
+  padding: 60px 15px 0;
+}
+
+.footer {
+  background-color: #f5f5f5;
+  width: 100%;
+  position: fixed;
+  bottom: 1px;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
 /* workaround modal-open padding issue */
 body.modal-open {
   padding-right: 0 !important;
